tests/snapshots/feature-sustain.md.snap
---
source: tests/examples.rs
expression: events
---
[
    MidiEvent {
        time: 0.0,
        duration: 7.0,
        channel: 2,
        note: 48,
        velocity: 100,
    },
    MidiEvent {
        time: 0.0,
        duration: 2.0,
        channel: 2,
        note: 55,
        velocity: 100,
    },
    MidiEvent {
        time: 1.0,
        duration: 1.0,
        channel: 2,
        note: 50,
        velocity: 100,
    },
    MidiEvent {
        time: 2.0,
        duration: 3.0,
        channel: 2,
        note: 52,
        velocity: 100,
    },
    MidiEvent {
        time: 2.0,
        duration: 2.0,
        channel: 2,
        note: 55,
        velocity: 100,
    },
    MidiEvent {
        time: 3.0,
        duration: 1.0,
        channel: 2,
        note: 50,
        velocity: 100,
    },
    MidiEvent {
        time: 4.0,
        duration: 2.0,
        channel: 2,
        note: 55,
        velocity: 100,
    },
    MidiEvent {
        time: 5.0,
        duration: 3.0,
        channel: 2,
        note: 50,
        velocity: 100,
    },
]
