tests/snapshots/feature-swing-16.loom.snap
---
source: tests/examples_test.rs
expression: events
---
[
    TrackEvent {
        track: "Track",
        event: Note {
            time: 0.0,
            duration: 1.0,
            channel: 0,
            note: 48,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 0.0,
            duration: 0.5,
            channel: 1,
            note: 60,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 0.0,
            duration: 0.33,
            channel: 2,
            note: 72,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 0.33,
            duration: 0.16999999999999998,
            channel: 2,
            note: 72,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 0.5,
            duration: 0.5,
            channel: 1,
            note: 60,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 0.5,
            duration: 0.33000000000000007,
            channel: 2,
            note: 72,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 0.8300000000000001,
            duration: 0.16999999999999993,
            channel: 2,
            note: 72,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 1.0,
            duration: 1.0,
            channel: 0,
            note: 48,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 1.0,
            duration: 0.5,
            channel: 1,
            note: 60,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 1.0,
            duration: 0.33000000000000007,
            channel: 2,
            note: 72,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 1.33,
            duration: 0.16999999999999993,
            channel: 2,
            note: 72,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 1.5,
            duration: 0.5,
            channel: 1,
            note: 60,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 1.5,
            duration: 0.33000000000000007,
            channel: 2,
            note: 72,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 1.83,
            duration: 0.16999999999999993,
            channel: 2,
            note: 72,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 2.0,
            duration: 1.0,
            channel: 0,
            note: 48,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 2.0,
            duration: 0.5,
            channel: 1,
            note: 60,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 2.0,
            duration: 0.33000000000000007,
            channel: 2,
            note: 72,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 2.33,
            duration: 0.16999999999999993,
            channel: 2,
            note: 72,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 2.5,
            duration: 0.5,
            channel: 1,
            note: 60,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 2.5,
            duration: 0.33000000000000007,
            channel: 2,
            note: 72,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 2.83,
            duration: 0.16999999999999993,
            channel: 2,
            note: 72,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 3.0,
            duration: 1.0,
            channel: 0,
            note: 48,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 3.0,
            duration: 0.5,
            channel: 1,
            note: 60,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 3.0,
            duration: 0.33000000000000007,
            channel: 2,
            note: 72,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 3.33,
            duration: 0.16999999999999993,
            channel: 2,
            note: 72,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 3.5,
            duration: 0.5,
            channel: 1,
            note: 60,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 3.5,
            duration: 0.33000000000000007,
            channel: 2,
            note: 72,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 3.83,
            duration: 0.16999999999999993,
            channel: 2,
            note: 72,
            velocity: 100,
        },
    },
]
