tests/snapshots/feature-swing-amount.loom.snap
---
source: tests/examples_test.rs
expression: events
---
[
    MidiEvent {
        time: 0.0,
        duration: 1.0,
        channel: 0,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 0.0,
        duration: 0.6,
        channel: 1,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 0.0,
        duration: 0.3,
        channel: 2,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 0.3,
        duration: 0.3,
        channel: 2,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 0.6,
        duration: 0.4,
        channel: 1,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 0.6,
        duration: 0.20000000000000007,
        channel: 2,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 0.8,
        duration: 0.19999999999999996,
        channel: 2,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 1.0,
        duration: 1.0,
        channel: 0,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 1.0,
        duration: 0.6000000000000001,
        channel: 1,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 1.0,
        duration: 0.30000000000000004,
        channel: 2,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 1.3,
        duration: 0.30000000000000004,
        channel: 2,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 1.6,
        duration: 0.3999999999999999,
        channel: 1,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 1.6,
        duration: 0.19999999999999996,
        channel: 2,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 1.8,
        duration: 0.19999999999999996,
        channel: 2,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 2.0,
        duration: 1.0,
        channel: 0,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 2.0,
        duration: 0.6000000000000001,
        channel: 1,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 2.0,
        duration: 0.2999999999999998,
        channel: 2,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 2.3,
        duration: 0.30000000000000027,
        channel: 2,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 2.6,
        duration: 0.3999999999999999,
        channel: 1,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 2.6,
        duration: 0.20000000000000018,
        channel: 2,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 2.8000000000000003,
        duration: 0.19999999999999973,
        channel: 2,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 3.0,
        duration: 1.0,
        channel: 0,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 3.0,
        duration: 0.6000000000000001,
        channel: 1,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 3.0,
        duration: 0.2999999999999998,
        channel: 2,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 3.3,
        duration: 0.30000000000000027,
        channel: 2,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 3.6,
        duration: 0.3999999999999999,
        channel: 1,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 3.6,
        duration: 0.20000000000000018,
        channel: 2,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 3.8000000000000003,
        duration: 0.19999999999999973,
        channel: 2,
        note: 72,
        velocity: 100,
    },
]
