tests/snapshots/feature-template-holizontal.loom.snap
---
source: tests/examples_test.rs
expression: events
---
[
    TrackEvent {
        track: "Piano",
        event: Note {
            time: 0.0,
            duration: 2.0,
            channel: 0,
            note: 60,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Piano",
        event: Note {
            time: 0.0,
            duration: 2.0,
            channel: 0,
            note: 64,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Piano",
        event: Note {
            time: 0.0,
            duration: 2.0,
            channel: 0,
            note: 67,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Piano",
        event: Note {
            time: 2.0,
            duration: 2.0,
            channel: 0,
            note: 65,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Piano",
        event: Note {
            time: 2.0,
            duration: 2.0,
            channel: 0,
            note: 69,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Piano",
        event: Note {
            time: 2.0,
            duration: 2.0,
            channel: 0,
            note: 72,
            velocity: 100,
        },
    },
]
