tests/snapshots/feature-template-vertical.loom.snap
---
source: tests/examples_test.rs
expression: events
---
[
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 0.0,
            duration: 0.1111111111111111,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 0.0,
            duration: 1.0,
            channel: 0,
            note: 60,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 0.0,
            duration: 0.4444444444444444,
            channel: 0,
            note: 64,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 0.1111111111111111,
            duration: 0.1111111111111111,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 0.2222222222222222,
            duration: 0.1111111111111111,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 0.3333333333333333,
            duration: 0.1111111111111111,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 0.4444444444444444,
            duration: 0.11111111111111116,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 0.4444444444444444,
            duration: 0.4444444444444444,
            channel: 0,
            note: 64,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 0.5555555555555556,
            duration: 0.11111111111111105,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 0.6666666666666666,
            duration: 0.11111111111111105,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 0.7777777777777777,
            duration: 0.11111111111111116,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 0.8888888888888888,
            duration: 0.11111111111111116,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 0.8888888888888888,
            duration: 0.4444444444444444,
            channel: 0,
            note: 64,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 1.0,
            duration: 0.11111111111111116,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 1.0,
            duration: 1.0,
            channel: 0,
            note: 60,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 1.1111111111111112,
            duration: 0.11111111111111094,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 1.222222222222222,
            duration: 0.11111111111111116,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 1.3333333333333333,
            duration: 0.11111111111111116,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 1.3333333333333333,
            duration: 0.4444444444444444,
            channel: 0,
            note: 64,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 1.4444444444444444,
            duration: 0.11111111111111094,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 1.5555555555555554,
            duration: 0.11111111111111116,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 1.6666666666666665,
            duration: 0.11111111111111116,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 1.7777777777777777,
            duration: 0.11111111111111116,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 1.7777777777777777,
            duration: 0.44444444444444464,
            channel: 0,
            note: 64,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 1.8888888888888888,
            duration: 0.11111111111111116,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 2.0,
            duration: 0.11111111111111116,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 2.0,
            duration: 1.0,
            channel: 0,
            note: 60,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 2.111111111111111,
            duration: 0.11111111111111116,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 2.2222222222222223,
            duration: 0.11111111111111072,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 2.2222222222222223,
            duration: 0.4444444444444442,
            channel: 0,
            note: 64,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 2.333333333333333,
            duration: 0.11111111111111116,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 2.444444444444444,
            duration: 0.11111111111111116,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 2.5555555555555554,
            duration: 0.11111111111111116,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 2.6666666666666665,
            duration: 0.11111111111111116,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 2.6666666666666665,
            duration: 0.4444444444444442,
            channel: 0,
            note: 64,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 2.7777777777777777,
            duration: 0.11111111111111116,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 2.888888888888889,
            duration: 0.11111111111111116,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 3.0,
            duration: 0.11111111111111072,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 3.0,
            duration: 1.0,
            channel: 0,
            note: 60,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 3.1111111111111107,
            duration: 0.11111111111111116,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 3.1111111111111107,
            duration: 0.44444444444444464,
            channel: 0,
            note: 64,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 3.222222222222222,
            duration: 0.11111111111111116,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 3.333333333333333,
            duration: 0.11111111111111116,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 3.444444444444444,
            duration: 0.11111111111111116,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 3.5555555555555554,
            duration: 0.11111111111111116,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Track",
        event: Note {
            time: 3.5555555555555554,
            duration: 0.44444444444444464,
            channel: 0,
            note: 64,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 3.6666666666666665,
            duration: 0.11111111111111116,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 3.7777777777777777,
            duration: 0.11111111111111116,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
    TrackEvent {
        track: "Drums",
        event: Note {
            time: 3.888888888888889,
            duration: 0.11111111111111116,
            channel: 9,
            note: 42,
            velocity: 100,
        },
    },
]
